# nw-page-editor

./: .dockerignore  .githook-pre-commit  .gitmodules  CMakeLists.txt  Dockerfile  README.md  githook-pre-commit  package.json
.circleci/: config.yml
.githooks/: pre-commit
css/: editor.css  menu.css  page-editor.css
debian/: changelog  control  copyright
examples/: lorem.xml  lorem2.xml  lorem_tesseract.xml
html/: index.html
js/: interact-1.2.6+.js  interact-1.2.6.min.js  jquery-2.2.1.min.js  jquery.stylesheet-0.3.7.min.js  jquery.stylesheet.js  main.js  mousetrap-1.5.3.min.js  nw-app.js  nw-winstate.js  page-canvas.js  page-editor.js  pdfjs-1.7.225.min.js  pdfjs-1.7.225.min.worker.js  svg-canvas.js  tiff-2016-11-01.min.js  web-app.js  winstate.js
nwjs/: nwjs-v0.12.3-osx-ia32  nwjs-v0.12.3-osx-x64  nwjs-v0.12.3-win-ia32  nwjs-v0.12.3-win-x64
plugins/: warning-display-chars.css  warning-display-chars.js
web-app/: apache2_http.conf  authGetFile.php  common.inc.php  git-commit-daemon.sh  htpasswd.inc.php  index.php  logout.php  page2svg.php  run_parallel.inc.sh  saveFile.php  start-server.sh
xsd/: pagecontent_omnius.xsd  pagecontent_prhlt.xsd  pagecontent_searchink.xsd
xslt/: alto2page.xslt  alto_v2_to_page.xslt  alto_v3_to_page.xslt  page2page.xslt  page2svg.xslt  page_fix_xsd_sequence.xslt  page_from_2010-03-19.xslt  page_from_2017-07-15.xslt  page_from_omnius.xslt  page_from_omnius_2019.07.03.xslt  poppler2page.xslt  sortattr.xslt  svg2page.xslt  tet2page.xslt
